--- a/index.html
+++ b/index.html
@@ -18,14 +18,44 @@
       </nav>
     </header>
     <!--Feature Content-->
-    <div class="feature" id="mission">
-      <div class="feature-overlay">
+    <div class="container">
+      <div class="feature" id="mission">
+        <div class="feature-overlay">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
 
+        </div>
       </div>
-
     </div>
     <!--Tea of the Month Section-->
-
+    <div class="container">
+      <div class="featured-teas" id="featured-tea">
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        <div class="img-container">
+          <div class="img-card">
+            <img src="./Resources/Images/img-berryblitz.jpg">
+            <span>Fall Berry Blitz Tea</span>
+          </div>
+          <div class="img-card">
+            <img src="./Resources/Images/img-spiced-rum.jpg">
+            <span>Spiced Rum Tea</span>
+          </div>
+          <div class="img-card">
+            <img src="./Resources/Images/img-donut.jpg">
+            <span>Seasonal Donuts</span>
+          </div>
+          <div class="img-card">
+            <img src="./Resources/Images/img-myrtle-ave.jpg">
+            <span>Myrtle Ave Tea</span>
+          </div>
+          <div class="img-card">
+            <img src="./Resources/Images/img-bedford-bizarre.jpg">
+            <span>Bedford Bizarre Tea</span>
+          </div>
+        </div>
+      </div>
+    </div>
     <!--Location-->
 
     <!--Footer-->
