--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       </div>
     </div>
     <!--Tea of the Month Section-->
-    <div class="container">
-      <div class="featured-teas" id="featured-tea">
-        <h2>Our Mission</h2>
-        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+    <div class="container" id="featured-tea">
+      <div class="featured-teas">
+        <h2>Teas of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy?</h4>
         <div class="img-container">
           <div class="img-card">
             <img src="./Resources/Images/img-berryblitz.jpg">
@@ -57,10 +57,37 @@
       </div>
     </div>
     <!--Location-->
-
+    <div class="container" id="locations">
+      <div class="location">
+        <h2 id="loc-title">Locations</h2>
+        <div class="loc-flexbox">
+          <div class="text-box">
+            <h3>Dowtown</h3>
+            <p>384 West 4th St</p>
+            <p>Suite 108</p>
+            <p>Portland, Maine</p>
+          </div>
+          <div class="text-box">
+            <h3>East Bayside</h3>
+            <p>3433 Phisherman's Avenue</p>
+            <p>(Northwest Corner)</p>
+            <p>Portland, Maine</p>
+          </div>
+          <div class="text-box">
+            <h3>Oakdale</h3>
+            <p>515 Crescent Avenue</p>
+            <p>Second Floor</p>
+            <p>Portland, Maine</p>
+          </div>
+        </div>
+      </div>
+    </div>
     <!--Footer-->
-    <footer>
-
-    </footer>
+    <div class="footer">
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+      <h5>917-555-8904</h5>
+    </div>
+    <h5 id="copyright">&copy; The Tea Cozy 2017</h5>
   </body>
 </html>
