--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Tea Cozy</title>
-    <link rel="stylesheet" href="./Resources/CSS/style.css">
+    <link rel="stylesheet" type="text/css" href="./Resources/CSS/style.css">
   </head>
   <body>
     <!--Header-->
     <header>
       <div class="logo">
-        <img src="./Resources/Images/img-tea-cozy-logo.png" id="logo">
+        <img src="./Resources/Images/img-tea-cozy-logo.png">
       </div>
       <nav>
         <span><a href="#mission">Mission</a></span>
